--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,15 @@
 <html lang="zh-cn">
 <head>
-  <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body style="width: 400px">
-<div><input id="search" /></div>
+
+<body style="width: 200px">
+<div>
+    <input id="search" placeholder="input" autocomplete="off"/>
+</div>
+
 <div id="bookmarks"></div>
+
 <script src="popup.js"></script>
 </body>
 </html>
