--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
 
 <body style="width: 200px">
 <div>
-    <input id="search" placeholder="input" autocomplete="off"/>
+    <input id="search" placeholder="input" autocomplete="off" autofocus="autofocus"/>
 </div>
 
 <div id="bookmarks"></div>
